# newsletter

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: newsletter.yml
src/newsletter/: config.py  fetcher.py  filter.py  main.py  models.py  parser.py  renderer.py  sender.py  sources.py  storage.py
templates/: newsletter.html.j2
