[project]
name = "newsletter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "feedparser>=6.0",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = ["ruff>=0.9"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsletter"]

[project.scripts]
newsletter = "newsletter.main:main"
